# easy_ga

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_genetic_algorithm.rs  bench_selection.rs  main.rs
src/: gene.rs  genetic_algorithm.rs  lib.rs  logger.rs  main.rs  selection.rs
src/samples/: mod.rs  my_gene.rs
tests/: test_genetic_algorithm.rs  test_selection.rs
